--- a/_footer.scss
+++ b/_footer.scss
@@ -2,7 +2,7 @@
     background-image: url(img/sea.png);
     background-repeat: no-repeat;
     padding-bottom: 126px;
-
+    background-size: cover;
 }
 
 .footer_flex {
@@ -19,6 +19,7 @@
 
 }
 
+
 .quote {
     text-align: center;
     margin-top: 30px;
@@ -27,7 +28,10 @@
     line-height: 24px;
     color: #222224;
     font-family: "Lato";
+
+
 }
+
 
 .footer_top_right {
     display: flex;
@@ -36,6 +40,7 @@
     margin-top: 135px;
     width: 557px;
 }
+
 
 .subscribe {
     text-align: center;
@@ -68,6 +73,11 @@
     color: $white;
     padding: 21px;
     font-family: "Lato";
+    transition: transform 0.3s;
+}
+
+.footer_button:hover {
+    transform: scale(1.1);
 }
 
 .email {
@@ -109,6 +119,8 @@
     padding: 8px;
     background-color: $white;
     color: $blackstrong;
+    transition: background-color 0.3s;
+    transition: color 0.3s;
 }
 
 .fa-brands:hover {
