--- a/style.css
+++ b/style.css
@@ -47,10 +47,28 @@
 
 .logo {
   padding-top: 18px;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.logo:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .loop {
   padding-top: 28px;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.loop:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .burger {
@@ -58,12 +76,42 @@
   position: relative;
 }
 
+.burger_trans {
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.burger:hover .burger_trans {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
 .personal {
   padding-top: 26px;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.personal:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .basket {
   padding-top: 26px;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.basket:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .mega-box {
@@ -103,6 +151,8 @@
   text-decoration: none;
   padding-top: 12px;
   padding-left: 20px;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
 }
 
 .mega-link:hover {
@@ -117,6 +167,7 @@
   background-image: url(img/sea.png);
   background-repeat: no-repeat;
   padding-bottom: 126px;
+  background-size: cover;
 }
 
 .footer_flex {
@@ -200,6 +251,15 @@
   color: #FFFFFF;
   padding: 21px;
   font-family: "Lato";
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.footer_button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .email {
@@ -245,6 +305,10 @@
   padding: 8px;
   background-color: #FFFFFF;
   color: #000000;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 .fa-brands:hover {
@@ -265,6 +329,212 @@
 .fa-instagram {
   padding-left: 9px;
   padding-right: 9px;
+}
+
+@-webkit-keyframes carAnim {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  12%,
+  100% {
+    opacity: 0;
+  }
+  10% {
+    -webkit-transform: translateX(120px);
+            transform: translateX(120px);
+  }
+}
+
+@keyframes carAnim {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  12%,
+  100% {
+    opacity: 0;
+  }
+  10% {
+    -webkit-transform: translateX(120px);
+            transform: translateX(120px);
+  }
+}
+
+@-webkit-keyframes salesAnim {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(0.91);
+            transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+            transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+            transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
+
+@keyframes salesAnim {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(0.91);
+            transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+            transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+            transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
+
+@-webkit-keyframes QAAnim {
+  0% {
+    -webkit-transform: translateY(-500px);
+            transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateY(-65px);
+            transform: translateY(-65px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateY(-28px);
+            transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateY(-8px);
+            transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
+
+@keyframes QAAnim {
+  0% {
+    -webkit-transform: translateY(-500px);
+            transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateY(-65px);
+            transform: translateY(-65px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateY(-28px);
+            transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateY(-8px);
+            transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
 }
 
 .banner {
@@ -298,12 +568,24 @@
   font-weight: 900;
   font-size: 48px;
   color: #222222;
+  -webkit-transition: margin-top 2s ease;
+  transition: margin-top 2s ease;
 }
 
 .banner .top_banner .bannerheading .bannerTextBottom {
   font-weight: 700;
   font-size: 32px;
   color: #222222;
+  -webkit-transition: margin-top 2s ease;
+  transition: margin-top 2s ease;
+}
+
+.bannerheading:hover .bannerTextTop {
+  margin-top: -50px;
+}
+
+.bannerheading:hover .bannerTextBottom {
+  margin-top: 100px;
 }
 
 .cards_sec {
@@ -335,6 +617,10 @@
   width: 360px;
   position: relative;
   margin-bottom: 30px;
+  -webkit-transition: -webkit-box-shadow 0.3s;
+  transition: -webkit-box-shadow 0.3s;
+  transition: box-shadow 0.3s;
+  transition: box-shadow 0.3s, -webkit-box-shadow 0.3s;
 }
 
 .card:hover {
@@ -372,6 +658,10 @@
 
 .card-link .card-pic {
   width: 100%;
+  -webkit-transition: -webkit-filter 0.3s;
+  transition: -webkit-filter 0.3s;
+  transition: filter 0.3s;
+  transition: filter 0.3s, -webkit-filter 0.3s;
 }
 
 .card-link .text-box {
@@ -430,6 +720,10 @@
   padding: 13px;
   border: 1px solid #FFFFFF;
   pointer-events: all;
+  -webkit-transition: -webkit-box-shadow 0.3s;
+  transition: -webkit-box-shadow 0.3s;
+  transition: box-shadow 0.3s;
+  transition: box-shadow 0.3s, -webkit-box-shadow 0.3s;
 }
 
 .add-box .add .add-txt {
@@ -457,18 +751,30 @@
 }
 
 .browse_all-box .browse_all {
-  border: 1px solid #F26376;
   background-color: #FFFFFF;
   text-decoration: none;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
 }
 
 .browse_all-box .browse_all .browse_all-txt {
+  border: 1px solid #F26376;
   font-family: "Lato";
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
   color: #F26376;
   padding: 14px 38px;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+
+.browse_all:hover {
+  background-color: #F26376;
+}
+
+.browse_all:hover .browse_all-txt {
+  color: #FFFFFF;
 }
 
 .fashion {
@@ -571,6 +877,28 @@
   font-family: "Lato";
 }
 
+.delivery {
+  -webkit-transition: -webkit-transform 2s;
+  transition: -webkit-transform 2s;
+  transition: transform 2s;
+  transition: transform 2s, -webkit-transform 2s;
+}
+
+.infoCards:hover .delivery_car {
+  -webkit-animation: carAnim 10s ease 0s infinite normal forwards;
+          animation: carAnim 10s ease 0s infinite normal forwards;
+}
+
+.infoCards:hover .delivery_sales {
+  -webkit-animation: salesAnim 1.5s ease-in-out infinite both;
+          animation: salesAnim 1.5s ease-in-out infinite both;
+}
+
+.infoCards:hover .delivery_QA {
+  -webkit-animation: QAAnim 1.1s both;
+          animation: QAAnim 1.1s both;
+}
+
 .under_header {
   background-color: #F1E4E6;
 }
@@ -629,6 +957,8 @@
   font-size: 14px;
   line-height: 17px;
   color: #000000;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 .fil_box {
@@ -645,6 +975,8 @@
   padding-top: 2px;
   background-color: #FFFFFF;
   color: #000000;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 .filter_box[open] {
@@ -693,6 +1025,8 @@
   font-size: 14px;
   line-height: 17px;
   color: #6F6E6E;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 .open_category {
@@ -726,6 +1060,11 @@
   font-size: 14px;
   line-height: 17px;
   color: #6F6E6E;
+}
+
+.open_trend[open] .fa-angle-down {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 .trend_flex {
@@ -771,6 +1110,11 @@
       -ms-flex-direction: column;
           flex-direction: column;
   position: absolute;
+}
+
+.open_size[open] .fa-angle-down {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 .size_flex {
@@ -824,6 +1168,17 @@
 
 .fa-angle-down {
   color: #6F6E6E;
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.open_price[open] .fa-angle-down {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 .carosel_woman {
@@ -874,6 +1229,12 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #FFFFFF;
+  margin-bottom: 129px;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
 }
 
 .product_info .women_col {
@@ -932,6 +1293,11 @@
   margin-bottom: 65px;
 }
 
+.product_info:hover {
+  -webkit-transform: translateY(-64px);
+          transform: translateY(-64px);
+}
+
 .add_product_box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -966,6 +1332,29 @@
   line-height: 19px;
   color: #F16D7F;
   padding-left: 23px;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+
+.fa-cart-shopping {
+  color: #F26376;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+
+.add_product:hover {
+  background-color: #F26376;
+}
+
+.add_product:hover .product-txt {
+  color: #FFFFFF;
+}
+
+.add_product:hover .fa-cart-shopping {
+  background-color: #F26376;
+  color: #FFFFFF;
 }
 
 .mega_cart_box {
@@ -1029,6 +1418,10 @@
   padding-right: 22px;
 }
 
+.mark_flex .fa-xmark:hover {
+  color: #F16D7F;
+}
+
 .cart_price {
   color: #F16D7F;
 }
@@ -1070,6 +1463,8 @@
 .shopping_box {
   background-color: #FFFFFF;
   border: 1px solid #A4A4A4;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
 }
 
 .shopping_box .clear_cart {
@@ -1084,6 +1479,39 @@
   font-size: 14px;
   line-height: 17px;
   color: #000000;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+
+.shopping_box:hover {
+  background-color: #A4A4A4;
+}
+
+.shopping_box:hover .clear_cart-txt {
+  color: #FFFFFF;
+}
+
+.shipping {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #222222;
+}
+
+.adress {
+  width: 360px;
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+  color: #222222;
+  padding-left: 17px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  margin-top: 20px;
 }
 
 .form_quote {
@@ -1097,40 +1525,20 @@
   width: 360px;
 }
 
-.form_quote .shipping {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 19px;
-  color: #222222;
-}
-
-.form_quote .adress {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 13px;
-  line-height: 16px;
-  color: #222222;
-  padding-left: 17px;
-  padding-top: 13px;
-  padding-bottom: 13px;
-  margin-top: 20px;
-}
-
-.form_quote .quote_box {
+.quote_box {
   width: 100px;
   margin-top: 20px;
   background-color: #FFFFFF;
   border: 1px solid #A4A4A4;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
 }
 
-.form_quote .quote_box .get_quote {
+.quote_box .get_quote {
   text-decoration: none;
 }
 
-.form_quote .quote_box .get_quote .quote-txt {
+.quote_box .get_quote .quote-txt {
   font-family: 'Lato';
   font-style: normal;
   font-weight: 300;
@@ -1138,6 +1546,16 @@
   line-height: 13px;
   color: #4A4A4A;
   padding: 9px 13px;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+
+.quote_box:hover {
+  background-color: #A4A4A4;
+}
+
+.quote_box:hover .quote-txt {
+  color: #FFFFFF;
 }
 
 .sub_total_flex {
@@ -1198,16 +1616,17 @@
 }
 
 .procced_box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
       align-self: center;
   margin-top: 17px;
-  padding: 15px 42px;
   background-color: #F16D7F;
   border: none;
   margin-bottom: 42px;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
 .procced_box .procced {
@@ -1221,6 +1640,12 @@
   font-size: 16px;
   line-height: 19px;
   color: #FFFFFF;
+  padding: 15px 42px;
+}
+
+.procced_box:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .proceed_hr {
@@ -1232,5 +1657,132 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+}
+
+.mega_registration_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 64px;
+}
+
+.registration {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.name_for_reg {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #222222;
+}
+
+.login {
+  margin-top: 34px;
+}
+
+.male {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 13px;
+  color: #000000;
+}
+
+.sex {
+  margin-left: 30px;
+}
+
+.for_password {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+  color: #B1B1B1;
+  margin-top: 15px;
+}
+
+.join_box {
+  width: 167px;
+  margin-top: 39px;
+  background-color: #F16D7F;
+  border: none;
+  margin-bottom: 42px;
+  margin-top: 39px;
+}
+
+.join {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-decoration: none;
+  padding: 16px 29px;
+}
+
+.join-txt {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #FFFFFF;
+}
+
+.fa-arrow-right-long {
+  background: #F16D7F;
+  color: #FFFFFF;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s;
+}
+
+.join:hover .fa-arrow-right-long {
+  -webkit-transform: translateX(15px) rotate(360deg) scale(1.5);
+          transform: translateX(15px) rotate(360deg) scale(1.5);
+}
+
+.radio {
+  margin-top: 31px;
+}
+
+.loyalty {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+}
+
+.mark_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 16px;
+}
+
+.loyalty_mark {
+  padding-left: 23px;
+}
+
+.loyalty_perks {
+  margin-top: 21px;
 }
 /*# sourceMappingURL=style.css.map */
