--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,94 @@
 
 @import "footer";
 
+@keyframes carAnim {
 
+    0%,
+    100% {
+        opacity: 1;
+    }
 
+    12%,
+    100% {
+        opacity: 0;
+    }
+
+    10% {
+        transform: translateX(120px);
+    }
+}
+
+@keyframes salesAnim {
+    from {
+        transform: scale(1);
+        transform-origin: center center;
+        animation-timing-function: ease-out;
+    }
+
+    10% {
+        transform: scale(0.91);
+        animation-timing-function: ease-in;
+    }
+
+    17% {
+        transform: scale(0.98);
+        animation-timing-function: ease-out;
+    }
+
+    33% {
+        transform: scale(0.87);
+        animation-timing-function: ease-in;
+    }
+
+    45% {
+        transform: scale(1);
+        animation-timing-function: ease-out;
+    }
+}
+
+@keyframes QAAnim {
+    0% {
+        transform: translateY(-500px);
+        animation-timing-function: ease-in;
+        opacity: 0;
+    }
+
+    38% {
+        transform: translateY(0);
+        animation-timing-function: ease-out;
+        opacity: 1;
+    }
+
+    55% {
+        transform: translateY(-65px);
+        animation-timing-function: ease-in;
+    }
+
+    72% {
+        transform: translateY(0);
+        animation-timing-function: ease-out;
+    }
+
+    81% {
+        transform: translateY(-28px);
+        animation-timing-function: ease-in;
+    }
+
+    90% {
+        transform: translateY(0);
+        animation-timing-function: ease-out;
+    }
+
+    95% {
+        transform: translateY(-8px);
+        animation-timing-function: ease-in;
+    }
+
+    100% {
+        transform: translateY(0);
+        animation-timing-function: ease-out;
+    }
+}
 
 
 
@@ -47,15 +133,29 @@
                 font-weight: 900;
                 font-size: 48px;
                 color: $black;
+                transition: margin-top 2s ease
             }
+
 
             .bannerTextBottom {
                 font-weight: 700;
                 font-size: 32px;
                 color: $black;
+                transition: margin-top 2s ease
             }
         }
     }
+}
+
+.bannerheading:hover .bannerTextTop {
+    margin-top: -50px;
+}
+
+
+
+.bannerheading:hover .bannerTextBottom {
+    margin-top: 100px;
+
 }
 
 
@@ -89,6 +189,7 @@
     width: 360px;
     position: relative;
     margin-bottom: 30px;
+    transition: box-shadow 0.3s;
 }
 
 .card:hover {
@@ -116,6 +217,7 @@
 
     .card-pic {
         width: 100%;
+        transition: filter 0.3s
     }
 
     .text-box {
@@ -169,6 +271,7 @@
         padding: 13px;
         border: 1px solid #FFFFFF;
         pointer-events: all;
+        transition: box-shadow 0.3s;
 
         .add-txt {
             font-family: "Lato";
@@ -197,21 +300,35 @@
     justify-content: center;
     margin-top: 18px;
 
+
     .browse_all {
-        border: 1px solid #F26376;
         background-color: $white;
         text-decoration: none;
+        transition: background-color 0.3s;
 
         .browse_all-txt {
+            border: 1px solid #F26376;
             font-family: "Lato";
             font-weight: 400;
             font-size: 16px;
             line-height: 19px;
             color: #F26376;
             padding: 14px 38px;
+            transition: color 0.3s;
         }
     }
 }
+
+.browse_all:hover {
+    background-color: #F26376;
+
+
+    .browse_all-txt {
+        color: $white;
+    }
+}
+
+
 
 
 .fashion {
@@ -286,6 +403,7 @@
     justify-content: space-between;
     align-items: center;
 
+
     .textHeadingInfo {
         font-weight: 400;
         font-size: 19.96px;
@@ -304,7 +422,21 @@
     }
 }
 
+.delivery {
+    transition: transform 2s;
+}
 
+.infoCards:hover .delivery_car {
+    animation: carAnim 10s ease 0s infinite normal forwards;
+}
+
+.infoCards:hover .delivery_sales {
+    animation: salesAnim 1.5s ease-in-out infinite both;
+}
+
+.infoCards:hover .delivery_QA {
+    animation: QAAnim 1.1s both;
+}
 
 .under_header {
     background-color: #F1E4E6;
@@ -365,6 +497,7 @@
     font-size: 14px;
     line-height: 17px;
     color: $blackstrong;
+    transition: color 0.3s;
 
 }
 
@@ -379,6 +512,7 @@
     padding-top: 2px;
     background-color: $white;
     color: $blackstrong;
+    transition: color 0.3s;
 
 }
 
@@ -397,10 +531,12 @@
 .filter_box[open]>summary {
     color: #EF5B70;
 
+
 }
 
 .filter_box[open] .fa-solid {
     color: #EF5B70;
+
 
 }
 
@@ -431,7 +567,8 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    color: #6F6E6E
+    color: #6F6E6E;
+    transition: color 0.3s;
 }
 
 .open_category {
@@ -467,6 +604,9 @@
     color: #6F6E6E
 }
 
+.open_trend[open] .fa-angle-down {
+    transform: rotate(360deg);
+}
 
 .trend_flex {
     display: flex;
@@ -499,6 +639,10 @@
     position: absolute;
 }
 
+.open_size[open] .fa-angle-down {
+    transform: rotate(360deg);
+}
+
 .size_flex {
     display: flex;
     justify-content: space-between;
@@ -509,6 +653,7 @@
     width: 59px;
 }
 
+
 .open_price[open] .open_price_check {
     width: 100px;
     background-color: $white;
@@ -517,6 +662,7 @@
     flex-direction: column;
     position: absolute;
 }
+
 
 .price_flex {
     display: flex;
@@ -537,9 +683,13 @@
 
 .fa-angle-down {
     color: #6F6E6E;
+    transform: rotate(270deg);
+    transition: transform 0.3s;
 }
 
-
+.open_price[open] .fa-angle-down {
+    transform: rotate(360deg);
+}
 
 
 
@@ -550,6 +700,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 
     .fa-angle-left {
         color: $blackstrong;
@@ -582,6 +733,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: $white;
+    margin-bottom: 129px;
+    transition: transform 0.5s;
+
 
     .women_col {
         font-family: 'Lato';
@@ -641,7 +796,9 @@
     }
 }
 
-
+.product_info:hover {
+    transform: translateY(-64px);
+}
 
 .add_product_box {
     display: flex;
@@ -660,6 +817,7 @@
         padding-right: 56px;
         padding-bottom: 14px;
 
+
         .product-txt {
             font-family: "Lato";
             font-weight: 400;
@@ -667,7 +825,29 @@
             line-height: 19px;
             color: $pink;
             padding-left: 23px;
+            transition: color 0.3s;
         }
+    }
+}
+
+.fa-cart-shopping {
+    color: #F26376;
+    transition: background-color 0.3s;
+    transition: color 0.3s;
+
+}
+
+.add_product:hover {
+    background-color: #F26376;
+
+    .product-txt {
+        color: $white;
+    }
+
+    .fa-cart-shopping {
+        background-color: #F26376;
+        color: $white;
+
     }
 }
 
@@ -719,6 +899,10 @@
         padding-top: 28px;
         padding-right: 22px;
     }
+
+    .fa-xmark:hover {
+        color: $pink;
+    }
 }
 
 .cart_price {
@@ -762,6 +946,7 @@
 .shopping_box {
     background-color: $white;
     border: 1px solid #A4A4A4;
+    transition: background-color 0.3s;
 
     .clear_cart {
         text-decoration: none;
@@ -774,61 +959,82 @@
             font-size: 14px;
             line-height: 17px;
             color: $blackstrong;
+            transition: color 0.3s;
         }
     }
 }
 
+.shopping_box:hover {
+    background-color: #A4A4A4;
 
+    .clear_cart-txt {
+        color: $white
+    }
+}
+
+
+
+.shipping {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+    color: #222222;
+}
+
+.adress {
+    width: 360px;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 16px;
+    color: $black;
+    padding-left: 17px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    margin-top: 20px;
+}
 
 .form_quote {
     display: flex;
     flex-direction: column;
     width: 360px;
+}
 
-    .shipping {
-        font-family: 'Lato';
-        font-style: normal;
-        font-weight: 300;
-        font-size: 16px;
-        line-height: 19px;
-        color: #222222;
-    }
+.quote_box {
+    width: 100px;
+    margin-top: 20px;
+    background-color: $white;
+    border: 1px solid #A4A4A4;
+    transition: background-color 0.3s;
 
-    .adress {
-        font-family: 'Lato';
-        font-style: normal;
-        font-weight: 300;
-        font-size: 13px;
-        line-height: 16px;
-        color: $black;
-        padding-left: 17px;
-        padding-top: 13px;
-        padding-bottom: 13px;
-        margin-top: 20px;
-    }
+    .get_quote {
 
-    .quote_box {
-        width: 100px;
-        margin-top: 20px;
-        background-color: $white;
-        border: 1px solid #A4A4A4;
+        text-decoration: none;
 
-        .get_quote {
-
-            text-decoration: none;
-
-            .quote-txt {
-                font-family: 'Lato';
-                font-style: normal;
-                font-weight: 300;
-                font-size: 11px;
-                line-height: 13px;
-                color: #4A4A4A;
-                padding: 9px 13px;
-            }
+        .quote-txt {
+            font-family: 'Lato';
+            font-style: normal;
+            font-weight: 300;
+            font-size: 11px;
+            line-height: 13px;
+            color: #4A4A4A;
+            padding: 9px 13px;
+            transition: color 0.3s;
         }
     }
 }
+
+.quote_box:hover {
+    background-color: #A4A4A4;
+
+    .quote-txt {
+        color: $white
+    }
+}
+
 
 .sub_total_flex {
     width: 108px;
@@ -875,13 +1081,12 @@
 }
 
 .procced_box {
-    display: flex;
     align-self: center;
     margin-top: 17px;
-    padding: 15px 42px;
     background-color: $pink;
     border: none;
     margin-bottom: 42px;
+    transition: transform 0.3s;
 
     .procced {
         text-decoration: none;
@@ -893,9 +1098,15 @@
             font-size: 16px;
             line-height: 19px;
             color: $white;
+            padding: 15px 42px;
         }
     }
 }
+
+.procced_box:hover {
+    transform: scale(1.1);
+}
+
 
 .proceed_hr {
     background-color: #E2E2E2;
@@ -904,4 +1115,126 @@
     margin-top: 12px;
     border: none;
     align-self: center;
+}
+
+
+
+
+
+
+
+.mega_registration_box {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 64px;
+}
+
+.registration {
+    display: flex;
+    flex-direction: column;
+}
+
+.name_for_reg {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+    color: $black;
+
+}
+
+.login {
+    margin-top: 34px;
+}
+
+.male {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 11px;
+    line-height: 13px;
+    color: $blackstrong;
+}
+
+
+.sex {
+    margin-left: 30px;
+}
+
+.for_password {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 16px;
+    color: #B1B1B1;
+    margin-top: 15px;
+}
+
+.join_box {
+    width: 167px;
+    margin-top: 39px;
+    background-color: $pink;
+    border: none;
+    margin-bottom: 42px;
+    margin-top: 39px;
+}
+
+
+.join {
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
+    padding: 16px 29px;
+
+}
+
+.join-txt {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: $white;
+}
+
+.fa-arrow-right-long {
+    background: $pink;
+    color: $white;
+    transition: transform 1s;
+}
+
+
+
+.join:hover .fa-arrow-right-long {
+    transform: translateX(15px) rotate(360deg) scale(1.5);
+}
+
+.radio {
+    margin-top: 31px;
+}
+
+.loyalty {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    color: $blackstrong;
+
+}
+
+.mark_box {
+    display: flex;
+    margin-top: 16px;
+}
+
+.loyalty_mark {
+    padding-left: 23px;
+
+}
+
+.loyalty_perks {
+    margin-top: 21px;
 }
