--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-  width: 1140px;
+  max-width: 1140px;
   margin: 0 auto;
 }
 
@@ -14,7 +14,7 @@
 }
 
 .menu_header {
-  height: 75px;
+  min-height: 75px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -278,6 +278,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 100%;
 }
 
 .rights {
@@ -537,12 +538,16 @@
   }
 }
 
+.wrapper {
+  padding: 0 2%;
+}
+
 .banner {
   background-color: #F1E4E6;
   height: 764px;
 }
 
-.banner .top_banner {
+.top_banner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -551,20 +556,22 @@
           justify-content: space-between;
 }
 
-.banner .top_banner .bannerMan {
+.bannerMan {
   margin-left: -230px;
 }
 
-.banner .top_banner .bannerheading {
+.bannerheading {
   border-left: 12px solid #F16D7F;
   padding-left: 12px;
   float: left;
   margin-top: 290px;
-  height: 93px;
+  max-height: 93px;
   font-family: "Lato";
+  width: 405px;
+  padding-right: 3px;
 }
 
-.banner .top_banner .bannerheading .bannerTextTop {
+.bannerTextTop {
   font-weight: 900;
   font-size: 48px;
   color: #222222;
@@ -572,7 +579,7 @@
   transition: margin-top 2s ease;
 }
 
-.banner .top_banner .bannerheading .bannerTextBottom {
+.bannerTextBottom {
   font-weight: 700;
   font-size: 32px;
   color: #222222;
@@ -614,7 +621,7 @@
 }
 
 .card {
-  width: 360px;
+  width: 30%;
   position: relative;
   margin-bottom: 30px;
   -webkit-transition: -webkit-box-shadow 0.3s;
@@ -791,28 +798,32 @@
   margin-top: 65px;
 }
 
-.forPeople .forWomen {
+.forWomen {
   position: relative;
   text-align: center;
+  width: 32%;
 }
 
-.forPeople .forMen {
+.forMen {
   position: relative;
   text-align: center;
+  width: 32%;
 }
 
-.forPeople .forKids {
+.forKids {
   position: relative;
   text-align: center;
+  width: 32%;
 }
 
 .accesories {
   margin-top: 30px;
   position: relative;
   text-align: center;
+  width: 100%;
 }
 
-.accesories .textAccesories {
+.textAccesories {
   top: 80px;
   left: 125px;
 }
@@ -1508,9 +1519,7 @@
   font-size: 13px;
   line-height: 16px;
   color: #222222;
-  padding-left: 17px;
-  padding-top: 13px;
-  padding-bottom: 13px;
+  padding: 13px 17px;
   margin-top: 20px;
 }
 
@@ -1784,5 +1793,69 @@
 
 .loyalty_perks {
   margin-top: 21px;
+}
+
+@media (max-width: 375px) {
+  .container {
+    max-width: 375px;
+  }
+  .forPeople {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .forPeople {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 32px;
+  }
+  .forWomen {
+    position: relative;
+    text-align: center;
+    width: 100%;
+    margin-top: 32px;
+  }
+  .forMen {
+    position: relative;
+    text-align: center;
+    width: 100%;
+    margin-top: 32px;
+  }
+  .forKids {
+    position: relative;
+    text-align: center;
+    width: 100%;
+    margin-top: 32px;
+  }
+  .accesories {
+    margin-top: 30px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  .bannerMan {
+    margin-left: -130px;
+  }
+  .bannerheading {
+    margin-top: 138px;
+  }
+  .bannerTextTop {
+    font-size: 44px;
+  }
+  .bannerTextBottom {
+    font-size: 24px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
