--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
   margin: 0 auto;
 }
 
+.wrapper {
+  padding: 0 2%;
+}
+
 .header {
   background-color: #222222;
 }
@@ -191,7 +195,7 @@
       -ms-flex-align: center;
           align-items: center;
   margin-top: 97px;
-  width: 360px;
+  width: 32%;
 }
 
 .quote {
@@ -216,7 +220,7 @@
       -ms-flex-align: center;
           align-items: center;
   margin-top: 135px;
-  width: 557px;
+  width: 48%;
 }
 
 .subscribe {
@@ -538,10 +542,6 @@
   }
 }
 
-.wrapper {
-  padding: 0 2%;
-}
-
 .banner {
   background-color: #F1E4E6;
   height: 764px;
@@ -554,26 +554,29 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 100%;
 }
 
 .bannerMan {
-  margin-left: -230px;
+  margin-left: -20%;
+  width: 20%;
 }
 
 .bannerheading {
   border-left: 12px solid #F16D7F;
   padding-left: 12px;
   float: left;
-  margin-top: 290px;
-  max-height: 93px;
+  margin-top: 25%;
+  height: 93px;
   font-family: "Lato";
-  width: 405px;
-  padding-right: 3px;
+  width: 60%;
+  margin-left: 60%;
 }
 
 .bannerTextTop {
   font-weight: 900;
-  font-size: 48px;
+  font-size: 44px;
+  line-height: 57px;
   color: #222222;
   -webkit-transition: margin-top 2s ease;
   transition: margin-top 2s ease;
@@ -581,7 +584,8 @@
 
 .bannerTextBottom {
   font-weight: 700;
-  font-size: 32px;
+  font-size: 24px;
+  line-height: 37px;
   color: #222222;
   -webkit-transition: margin-top 2s ease;
   transition: margin-top 2s ease;
@@ -595,22 +599,88 @@
   margin-top: 100px;
 }
 
+.content {
+  margin-top: 65px;
+}
+
+.fashion {
+  color: #F16D7F;
+}
+
+.forPeople {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.forWomen {
+  position: relative;
+  text-align: center;
+  width: 32%;
+}
+
+.forMen {
+  position: relative;
+  text-align: center;
+  width: 32%;
+}
+
+.forKids {
+  position: relative;
+  text-align: center;
+  width: 32%;
+}
+
+.accesories {
+  margin-top: 30px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.imgFor {
+  width: 100%;
+}
+
+.textAccesories {
+  position: absolute;
+  top: 35%;
+  left: 35%;
+  color: #F1E4E6;
+  font-family: "Lato";
+  width: 30%;
+}
+
+.textMen {
+  position: absolute;
+  top: 34%;
+  left: 19%;
+  right: 19%;
+  color: #F1E4E6;
+  font-family: "Lato";
+}
+
 .cards_sec {
   margin-bottom: 96px;
   position: relative;
 }
 
-.cards_sec .fetured {
+.fetured {
   font-family: "Lato";
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
   color: #222222;
   text-align: center;
-  margin-top: 90px;
+  margin-top: 8%;
 }
 
-.cards_sec .feturedShop {
+.feturedShop {
   font-family: "Lato";
   font-weight: 400;
   font-size: 14px;
@@ -754,7 +824,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 18px;
+  margin-top: 1.5%;
 }
 
 .browse_all-box .browse_all {
@@ -784,65 +854,52 @@
   color: #FFFFFF;
 }
 
-.fashion {
-  color: #F16D7F;
-}
-
-.forPeople {
+.pagination {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pagination-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: none;
+  width: 20%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: 65px;
+  padding: 12px;
+  border: 1px solid #EBEBEB;
 }
 
-.forWomen {
-  position: relative;
-  text-align: center;
-  width: 32%;
+.page-link {
+  text-decoration: none;
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
 }
 
-.forMen {
-  position: relative;
-  text-align: center;
-  width: 32%;
+.page-item {
+  text-decoration: none;
 }
 
-.forKids {
-  position: relative;
-  text-align: center;
-  width: 32%;
-}
-
-.accesories {
-  margin-top: 30px;
-  position: relative;
-  text-align: center;
-  width: 100%;
-}
-
-.textAccesories {
-  top: 80px;
-  left: 125px;
-}
-
-.textMen {
-  position: absolute;
-  bottom: 105px;
-  right: 125px;
-  color: #F1E4E6;
-  height: 40px;
-  font-family: "Lato";
+.page-link:hover {
+  color: #F16D7F;
 }
 
 .info {
   background-color: #222224;
+  min-height: 341px;
 }
 
 .info_container {
-  height: 341px;
+  min-height: 341px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -855,8 +912,8 @@
 }
 
 .infoCards {
-  width: 360px;
-  height: 134px;
+  width: 32%;
+  min-height: 134px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -952,11 +1009,18 @@
   line-height: 17px;
 }
 
+.bread_crumb {
+  padding-top: 1%;
+}
+
+.open-block {
+  margin-right: 7%;
+}
+
 .filter_select {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 1140px;
   margin-top: 51px;
 }
 
@@ -1049,8 +1113,8 @@
   color: #EF5B70;
 }
 
-.open_trend[open] .open_check {
-  width: 132px;
+.open_trend[open] .open_trend_check {
+  width: 13%;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
           box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
@@ -1093,23 +1157,19 @@
 }
 
 .selector {
-  padding-left: 30px;
+  padding-left: 7%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 300px;
+  width: 30%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   z-index: 1;
 }
 
-.open_size {
-  width: 49px;
-}
-
 .open_size[open] .open_size_check {
-  width: 79px;
+  width: 7%;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
           box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
@@ -1138,12 +1198,8 @@
   width: 49px;
 }
 
-.open_price {
-  width: 59px;
-}
-
 .open_price[open] .open_price_check {
-  width: 100px;
+  width: 10%;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
           box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
@@ -1169,7 +1225,6 @@
 
 .sumsel {
   list-style-type: none;
-  width: 132px;
   font-family: 'Lato';
   font-weight: 600;
   font-size: 14px;
@@ -1376,10 +1431,11 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 100%;
 }
 
 .cart_box {
-  width: 652px;
+  width: 55%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1500,6 +1556,10 @@
 
 .shopping_box:hover .clear_cart-txt {
   color: #FFFFFF;
+}
+
+.shipping-box {
+  width: 35%;
 }
 
 .shipping {
@@ -1676,6 +1736,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: 64px;
+  width: 100%;
 }
 
 .registration {
@@ -1686,6 +1747,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 40%;
 }
 
 .name_for_reg {
@@ -1795,9 +1857,118 @@
   margin-top: 21px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  .textAccesories {
+    left: 25%;
+    width: 50%;
+  }
+  .card {
+    width: 48%;
+  }
+  .info_container {
+    min-height: 341px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+  .infoCards {
+    width: 100%;
+    min-height: 134px;
+    padding: 24px 0px;
+  }
+  .footer_flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer_top_right {
+    width: 100%;
+  }
+  .footer_top_left {
+    width: 100%;
+  }
+  .last_card {
+    display: none;
+  }
+  .selector {
+    padding-left: 0;
+  }
+  .filter_box[open] {
+    width: 200px;
+  }
+  .sumfil {
+    width: 200px;
+  }
+  .open_category {
+    width: 200px;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 768px) {
+  .bannerMan {
+    display: none;
+  }
+  .banner {
+    height: 363px;
+  }
+  .top_banner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .bannerheading {
+    margin-top: 17%;
+    height: 10%;
+    width: 100%;
+    margin-left: 10%;
+  }
+}
+
+@media (max-width: 376px) {
   .container {
     max-width: 375px;
+  }
+  .bannerMan {
+    display: none;
+  }
+  .banner {
+    height: 363px;
+  }
+  .bannerheading {
+    margin-top: 30%;
+    height: 93px;
+    width: 100%;
+    margin-left: 10%;
+  }
+  .iconright {
+    width: 50px;
+  }
+  .personal {
+    display: none;
+  }
+  .basket {
+    display: none;
+  }
+  .content {
+    margin-top: 32px;
   }
   .forPeople {
     display: -webkit-box;
@@ -1806,56 +1977,80 @@
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
-  .forPeople {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-top: 32px;
-  }
   .forWomen {
-    position: relative;
-    text-align: center;
     width: 100%;
     margin-top: 32px;
   }
   .forMen {
-    position: relative;
-    text-align: center;
     width: 100%;
     margin-top: 32px;
   }
   .forKids {
-    position: relative;
-    text-align: center;
     width: 100%;
     margin-top: 32px;
   }
   .accesories {
-    margin-top: 30px;
-    position: relative;
     text-align: center;
     width: 100%;
   }
+  .imgForAccesories {
+    height: 111px;
+  }
+  .textAccesories {
+    top: 20%;
+  }
+  .textMen {
+    top: 42%;
+  }
+  .card {
+    width: 100%;
+  }
+  .footer_bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .icons {
+    padding-top: 43px;
+    padding-bottom: 0px;
+  }
+  .rights {
+    padding-top: 40px;
+  }
+  .new_arrivals {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .p_under_header {
+    padding-bottom: 20%;
+  }
+  .open_fil {
+    display: none;
+  }
 }
 
-@media (max-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-  .bannerMan {
-    margin-left: -130px;
-  }
-  .bannerheading {
-    margin-top: 138px;
-  }
-  .bannerTextTop {
-    font-size: 44px;
-  }
-  .bannerTextBottom {
-    font-size: 24px;
+@media (max-width: 480px) {
+  .selector {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 /*# sourceMappingURL=style.css.map */
