--- a/style.scss
+++ b/style.scss
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     outline: none;
-}
 
+}
 
 
 .container {
@@ -11,6 +11,12 @@
     margin: 0 auto;
 }
 
+
+.wrapper {
+    padding: 0 2%;
+
+
+}
 
 @import "vars";
 
@@ -20,11 +26,8 @@
 
 @import "animations";
 
-.wrapper {
-    padding: 0 2%;
 
 
-}
 
 
 
@@ -32,32 +35,43 @@
 .banner {
     background-color: #F1E4E6;
     height: 764px;
+
+
 }
 
 
 .top_banner {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+
+
 }
 
 .bannerMan {
-    margin-left: -230px;
+    margin-left: -20%;
+    width: 20%;
 }
+
+
 
 .bannerheading {
     border-left: 12px solid $pink;
     padding-left: 12px;
     float: left;
-    margin-top: 290px;
-    max-height: 93px;
+    margin-top: 25%;
+    height: 93px;
     font-family: "Lato";
-    width: 405px;
-    padding-right: 3px;
+    width: 60%;
+    margin-left: 60%;
+
+
 }
 
 .bannerTextTop {
     font-weight: 900;
-    font-size: 48px;
+    font-size: 44px;
+    line-height: 57px;
     color: $black;
     transition: margin-top 2s ease
 }
@@ -65,7 +79,8 @@
 
 .bannerTextBottom {
     font-weight: 700;
-    font-size: 32px;
+    font-size: 24px;
+    line-height: 37px;
     color: $black;
     transition: margin-top 2s ease
 }
@@ -83,29 +98,106 @@
 }
 
 
+
+.content {
+    margin-top: 65px;
+}
+
+.fashion {
+    color: $pink;
+
+}
+
+.forPeople {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+
+.forWomen {
+    position: relative;
+    text-align: center;
+    width: 32%;
+
+
+
+}
+
+.forMen {
+    position: relative;
+    text-align: center;
+    width: 32%;
+
+
+
+}
+
+.forKids {
+    position: relative;
+    text-align: center;
+    width: 32%;
+
+}
+
+
+.accesories {
+    margin-top: 30px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+
+}
+
+.imgFor {
+    width: 100%;
+}
+
+.textAccesories {
+    position: absolute;
+    top: 35%;
+    left: 35%;
+    color: #F1E4E6;
+    font-family: "Lato";
+    width: 30%;
+
+
+}
+
+.textMen {
+    position: absolute;
+    top: 34%;
+    left: 19%;
+    right: 19%;
+    color: #F1E4E6;
+    font-family: "Lato";
+}
+
+
+
 .cards_sec {
     margin-bottom: 96px;
     position: relative;
+}
 
-    .fetured {
-        font-family: "Lato";
-        font-weight: 400;
-        font-size: 30px;
-        line-height: 36px;
-        color: $black;
-        text-align: center;
-        margin-top: 90px;
-    }
+.fetured {
+    font-family: "Lato";
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
+    color: $black;
+    text-align: center;
+    margin-top: 8%;
+}
 
-    .feturedShop {
-        font-family: "Lato";
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 17px;
-        color: #9F9F9F;
-        text-align: center;
-        margin-top: 6px;
-    }
+.feturedShop {
+    font-family: "Lato";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #9F9F9F;
+    text-align: center;
+    margin-top: 6px;
 }
 
 
@@ -114,6 +206,7 @@
     position: relative;
     margin-bottom: 30px;
     transition: box-shadow 0.3s;
+
 }
 
 .card:hover {
@@ -222,7 +315,7 @@
 .browse_all-box {
     display: flex;
     justify-content: center;
-    margin-top: 18px;
+    margin-top: 1.5%;
 
 
     .browse_all {
@@ -252,83 +345,54 @@
     }
 }
 
+.pagination {
+    display: flex;
+    justify-content: center;
 
+}
 
+.pagination-flex {
+    display: flex;
+    list-style-type: none;
+    width: 20%;
+    justify-content: space-between;
+    padding: 12px;
+    border: 1px solid #EBEBEB;
+}
 
-.fashion {
+.page-link {
+    text-decoration: none;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.page-item {
+    text-decoration: none;
+}
+
+.page-link:hover {
     color: $pink;
 }
 
-.forPeople {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 65px;
-}
-
-.forWomen {
-    position: relative;
-    text-align: center;
-    width: 32%;
-
-}
-
-.forMen {
-    position: relative;
-    text-align: center;
-    width: 32%;
-
-}
-
-.forKids {
-    position: relative;
-    text-align: center;
-    width: 32%;
-}
-
-
-.accesories {
-    margin-top: 30px;
-    position: relative;
-    text-align: center;
-    width: 100%
-}
-
-.textAccesories {
-    top: 80px;
-    left: 125px;
-}
-
-.textMen {
-    position: absolute;
-    bottom: 105px;
-    right: 125px;
-    color: #F1E4E6;
-    height: 40px;
-    font-family: "Lato";
-}
-
-
-
-
-
-
-
-
-
 .info {
     background-color: #222224;
+    min-height: 341px;
+
 }
 
 .info_container {
-    height: 341px;
+    min-height: 341px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .infoCards {
-    width: 360px;
-    height: 134px;
+    width: 32%;
+    min-height: 134px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -369,8 +433,12 @@
     animation: QAAnim 1.1s both;
 }
 
+
+
+
 .under_header {
     background-color: #F1E4E6;
+
 
 }
 
@@ -409,15 +477,22 @@
 
 }
 
+.bread_crumb {
+    padding-top: 1%;
+}
 
 
+
+
+
+.open-block {
+    margin-right: 7%;
+}
 
 
 .filter_select {
     display: flex;
-    width: 1140px;
     margin-top: 51px;
-
 }
 
 .sumfil {
@@ -429,7 +504,6 @@
     line-height: 17px;
     color: $blackstrong;
     transition: color 0.3s;
-
 }
 
 .fil_box {
@@ -438,37 +512,25 @@
     width: 70px;
 }
 
-
 .fa-solid {
     padding-top: 2px;
     background-color: $white;
     color: $blackstrong;
     transition: color 0.3s;
-
 }
-
-
 
 .filter_box[open] {
     width: 360px;
     background-color: $white;
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
-
-
 }
-
-
 
 .filter_box[open]>summary {
     color: #EF5B70;
-
-
 }
 
 .filter_box[open] .fa-solid {
     color: #EF5B70;
-
-
 }
 
 .summary_box {
@@ -478,9 +540,7 @@
     background-color: $white;
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
     z-index: 1;
-
 }
-
 
 .leftitem_category {
     border-left: 5px solid #F16D7F;
@@ -489,7 +549,6 @@
     padding-top: 15px;
     height: 37px;
     font-family: "Lato";
-
 }
 
 .text_category {
@@ -505,7 +564,6 @@
 .open_category {
     width: 360px;
     padding-top: 18px;
-
 }
 
 .open_category[open] .text_category {
@@ -517,8 +575,11 @@
 
 
 
-.open_trend[open] .open_check {
-    width: 132px;
+
+
+
+.open_trend[open] .open_trend_check {
+    width: 13%;
     background-color: $white;
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
     display: flex;
@@ -550,19 +611,18 @@
 }
 
 .selector {
-    padding-left: 30px;
+    padding-left: 7%;
     display: flex;
-    width: 300px;
+    width: 30%;
     justify-content: space-between;
     z-index: 1;
+
 }
 
-.open_size {
-    width: 49px;
-}
+
 
 .open_size[open] .open_size_check {
-    width: 79px;
+    width: 7%;
     background-color: $white;
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
     display: flex;
@@ -580,13 +640,11 @@
     width: 49px;
 }
 
-.open_price {
-    width: 59px;
-}
+
 
 
 .open_price[open] .open_price_check {
-    width: 100px;
+    width: 10%;
     background-color: $white;
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
     display: flex;
@@ -603,7 +661,6 @@
 
 .sumsel {
     list-style-type: none;
-    width: 132px;
     font-family: 'Lato';
     font-weight: 600;
     font-size: 14px;
@@ -611,6 +668,8 @@
     color: $blackstrong;
 
 }
+
+
 
 .fa-angle-down {
     color: #6F6E6E;
@@ -786,10 +845,11 @@
     margin-top: 96px;
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .cart_box {
-    width: 652px;
+    width: 55%;
     display: flex;
     flex-direction: column;
 }
@@ -903,7 +963,9 @@
     }
 }
 
-
+.shipping-box {
+    width: 35%;
+}
 
 .shipping {
     font-family: 'Lato';
@@ -1056,11 +1118,13 @@
     display: flex;
     justify-content: space-between;
     margin-top: 64px;
+    width: 100%;
 }
 
 .registration {
     display: flex;
     flex-direction: column;
+    width: 40%;
 }
 
 .name_for_reg {
@@ -1169,65 +1233,6 @@
 }
 
 
-@media (max-width: 375px) {
-
-    .container {
-        max-width: 375px;
-    }
-
-
-    .forPeople {
-        display: flex;
-        flex-wrap: wrap;
-
-
-    }
-
-
-    .forPeople {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 32px;
-    }
-
-    .forWomen {
-        position: relative;
-        text-align: center;
-        width: 100%;
-        margin-top: 32px;
-
-
-    }
-
-    .forMen {
-        position: relative;
-        text-align: center;
-        width: 100%;
-        margin-top: 32px;
-
-    }
-
-    .forKids {
-        position: relative;
-        text-align: center;
-        width: 100%;
-        margin-top: 32px;
-    }
-
-
-    .accesories {
-        margin-top: 30px;
-        position: relative;
-        text-align: center;
-        width: 100%;
-    }
-
-
-
-
-
-}
-
 @media (max-width: 768px) {
 
     .container {
@@ -1235,31 +1240,279 @@
     }
 
 
+    .textAccesories {
+        left: 25%;
+        width: 50%;
 
+    }
+
+    .card {
+        width: 48%;
+    }
+
+
+    .info_container {
+        min-height: 341px;
+        display: flex;
+        flex-wrap: wrap;
+        padding-top: 24px;
+        padding-bottom: 24px;
+
+    }
+
+    .infoCards {
+        width: 100%;
+        min-height: 134px;
+        padding: 24px 0px;
+    }
+
+    .footer_flex {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+
+    }
+
+    .footer_top_right {
+        width: 100%;
+    }
+
+    .footer_top_left {
+        width: 100%;
+
+    }
+
+    .last_card {
+        display: none;
+    }
+
+
+
+    .selector {
+        padding-left: 0;
+    }
+
+
+
+
+
+    .filter_box[open] {
+        width: 200px;
+
+    }
+
+    .sumfil {
+
+        width: 200px;
+
+    }
+
+    .open_category {
+        width: 200px;
+
+    }
+
+
+
+
+
+
+
+
+
+}
+
+@media (min-width: 375px) and (max-width: 768px) {
 
 
     .bannerMan {
-        margin-left: -130px;
+        display: none;
+    }
+
+    .banner {
+
+        height: 363px;
+
+    }
+
+    .top_banner {
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
     }
 
     .bannerheading {
-        margin-top: 138px;
-
+        margin-top: 17%;
+        height: 10%;
+        width: 100%;
+        margin-left: 10%;
 
 
     }
 
-    .bannerTextTop {
-        font-size: 44px;
+
+}
+
+
+@media (max-width: 376px) {
+
+
+    .container {
+        max-width: 375px;
     }
 
-    .bannerTextBottom {
+    .bannerMan {
+        display: none;
+    }
 
-        font-size: 24px;
+    .banner {
+
+        height: 363px;
 
     }
 
 
+
+
+    .bannerheading {
+        margin-top: 30%;
+        height: 93px;
+        width: 100%;
+        margin-left: 10%;
+
+
+    }
+
+
+
+    .iconright {
+        width: 50px;
+    }
+
+    .personal {
+        display: none;
+    }
+
+
+    .basket {
+        display: none;
+    }
+
+    .content {
+        margin-top: 32px;
+    }
+
+    .forPeople {
+        display: flex;
+        flex-wrap: wrap;
+
+    }
+
+
+
+    .forWomen {
+
+        width: 100%;
+        margin-top: 32px;
+
+    }
+
+    .forMen {
+
+        width: 100%;
+        margin-top: 32px;
+
+
+    }
+
+    .forKids {
+
+        width: 100%;
+        margin-top: 32px;
+
+    }
+
+
+    .accesories {
+
+        text-align: center;
+        width: 100%;
+
+    }
+
+    .imgForAccesories {
+        height: 111px;
+    }
+
+
+
+    .textAccesories {
+        top: 20%;
+
+    }
+
+    .textMen {
+
+        top: 42%;
+
+    }
+
+
+    .card {
+        width: 100%;
+    }
+
+
+    .footer_bottom {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        align-items: center;
+
+
+    }
+
+    .icons {
+        padding-top: 43px;
+        padding-bottom: 0px;
+
+    }
+
+    .rights {
+        padding-top: 40px;
+
+    }
+
+    .new_arrivals {
+        flex-wrap: wrap;
+        justify-content: center;
+
+
+    }
+
+    .p_under_header {
+        padding-bottom: 20%;
+    }
+
+    .open_fil {
+        display: none;
+    }
+}
+
+
+
+
+
+
+
+
+@media (max-width: 480px) {
+    .selector {
+        display: flex;
+        flex-direction: column;
+    }
 
 }
